# Talker

./: .gitignore  ADR.md  CLAUDE.md  Cargo.toml  TODO.md  profile.example.toml  profile.toml  talker_specification.md
nmea0183/: Cargo.toml
nmea0183/src/: ais.rs  checksum.rs  error.rs  lib.rs  proprietary.rs  sentence.rs  sentence_type.rs  talker_id.rs
nmea0183/tests/: integration.rs
talker/: Cargo.toml
talker/assets/fonts/: README.md
talker/src/: lib.rs  main.rs
talker/src/cli/: mod.rs
talker/src/core/: mod.rs
talker/src/core/channel/: config.rs  mod.rs  serial.rs  tcp.rs  udp.rs
talker/src/core/connection/: config.rs  mod.rs  serial.rs  tcp.rs  udp.rs
talker/src/core/data/: binary_field.rs  byte_order.rs  mod.rs
talker/src/core/logging/: gui_layer.rs  mod.rs
talker/src/core/message/: checksum.rs  codepage.rs  marker.rs  mod.rs  timestamp.rs
talker/src/core/profile/: migration.rs  mod.rs
talker/src/core/scheduler/: config.rs  mod.rs
talker/src/gui/: display.rs  draft.rs  mod.rs  thread.rs
