[workspace]
members = [
    "talker",
    "nmea0183",
]
resolver = "2"

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["Bill"]
license      = "MIT OR Apache-2.0"
rust-version = "1.95"

# Shared dependency versions — reference these in member crates with
# { workspace = true } to keep versions consistent across the workspace.
[workspace.dependencies]

# ── Serial port ───────────────────────────────────────────────────────────────
serialport = "4"

# ── GUI ───────────────────────────────────────────────────────────────────────
# eframe and egui MUST share the same minor version.
eframe = { version = "0.34", default-features = false, features = [
    "default_fonts",
    "persistence",          # save/restore window state
    "accesskit",            # accessibility support
    "glow",                 # OpenGL renderer (required for run_native)
] }
egui = "0.34"

# ── CLI argument parsing ──────────────────────────────────────────────────────
clap = { version = "4", features = ["derive"] }

# ── Signal handling ───────────────────────────────────────────────────────────
ctrlc = "3"

# ── Inter-thread communication ────────────────────────────────────────────────
crossbeam-channel = "0.5"

# ── Logging / tracing ─────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender   = "0.2"

# ── Error handling ────────────────────────────────────────────────────────────
# thiserror: library-style typed errors (used in nmea0183 crate)
# anyhow:    application-style errors with context (used in talker binary)
thiserror = "2"
anyhow    = "1"

# ── Serialization (profiles → TOML) ───────────────────────────────────────────
serde = { version = "1", features = ["derive"] }
# toml had a major bump from 0.8 to 1.x in early 2026. The 1.x API is
# cleaner but did change; verify the API surface used in core::profile
# matches 1.x. If not, pin to "0.8".
toml = "1"

# ── Platform directories (log files, config, state) ───────────────────────────
dirs = "6"

# ── CRC / checksum algorithms ─────────────────────────────────────────────────
crc = "3"

# ── Timestamps ────────────────────────────────────────────────────────────────
chrono = { version = "0.4", features = ["serde"] }

# ── Native file dialogs ───────────────────────────────────────────────────────
rfd = "0.15"
